Completed swagger-ui for the all endpoints
